--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ video {
 }
 
 .sub-container h4 {
-  background-color: #1270af;
+  background-color: #9580e0;
   padding: 2em; /* Utiliza em en lugar de píxeles */
   margin: 0; /* Elimina márgenes predeterminados */
   font-family: 'Arial', sans-serif;
