--- a/style.css
+++ b/style.css
@@ -55,15 +55,14 @@ body {
   margin: 1em 0; /* Utiliza em en lugar de píxeles */
 }
 
+
 .sub-container h1 {
-  color: #fdfdf7;
-  font-size: 1.2em;
-  margin: 0; /* Eliminado para evitar márgenes predeterminados */
-  font-weight: bold;
+  background-color: #b0afaf;
+  padding: 2em;
+  margin: 0;
+  font-family: 'Arial', sans-serif;
+  font-size: 2.2em;
   text-align: center;
-  display: flex;
-  font-family: "Tajawal", sans-serif;
-  font-weight: 500;
 }
 .h1 {
   color: #ffffff;
@@ -253,3 +252,4 @@ video {
     padding: 1em; /* Reducir el padding en pantallas pequeñas */
   }
 }
+
